--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,13 @@ services:
     restart: always
     image: "thingsboard/tb-postgres"
     ports:
-      - "8080:8080"           # Web UI
-      - "1883:1883"           # MQTT
-      - "7070:7070"           # Edge RPC
-      - "5683-5688:5683-5688/udp"  # CoAP/LwM2M
+      - "8080:8080"
+      - "1883:1883"
+      - "7070:7070"
+      - "5683-5688:5683-5688/udp"
     environment:
       TB_QUEUE_TYPE: in-memory
+      JAVA_OPTS: "-Dserver.address=0.0.0.0"
     volumes:
       - mytb-data:/data
       - mytb-logs:/var/log/thingsboard
